--- a/preventa.html
+++ b/preventa.html
@@ -39,7 +39,7 @@
                 <p class="bloqueTexto">Cuando se lanza un diseño se abre un periodo de venta para reservar un cupo de dicha remera. Se puede acceder a este completando el formulario correspondiente. Una vez reservado el cupo se deberá abonar el 50% de la prenda. Al cerrar la preventa se manda a confeccionar y luego estampar.
                 </p>
             <div class="paddingBottom"></div>
-            <p class="bloqueTexto">Si no contamos con stock, en caso de sobrar alguna remera la estaremos publicando via <a href="https://www.instagram.com" class="anchors">Instagram</a>.</p>
+            <p class="bloqueTexto  animacionStock">Si no contamos con stock, en caso de sobrar alguna remera la estaremos publicando via <a href="https://www.instagram.com" class="anchors">Instagram</a>.</p>
 
     </main>
 
