--- a/preventa.html
+++ b/preventa.html
@@ -36,7 +36,7 @@
         <h1 class="intro_titulo animate__animated animate__zoomIn">SISTEMA DE PREVENTA</h1>
         <div class="paddingBottom"></div>
         <ul>
-                <p class="bloqueTexto">Cuando se lanza un diseño se abre un periodo de venta para reservar un cupo de dicha remera. Se puede acceder a este completando el formulario correspondiente. Una vez reservado el cupo se deberá abonar el 50% de la prenda. Al cerrar la preventa se manda a confeccionar y luego estampar.
+                <p class="bloqueTexto animacionStock">Cuando se lanza un diseño se abre un periodo de venta para reservar un cupo de dicha remera. Se puede acceder a este completando el formulario correspondiente. Una vez reservado el cupo se deberá abonar el 50% de la prenda. Al cerrar la preventa se manda a confeccionar y luego estampar.
                 </p>
             <div class="paddingBottom"></div>
             <p class="bloqueTexto  animacionStock">Si no contamos con stock, en caso de sobrar alguna remera la estaremos publicando via <a href="https://www.instagram.com" class="anchors">Instagram</a>.</p>
