--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <div class="flex-item">
             <img
               src="./assets/kenma-remera.jpg"
-              class="imagenesCatalogo"
+              class="imagenesCatalogo displayNone"
               alt="kenma-remera"
             />
             <p class="textoCatalogo">Remera Kozume Kenma</p>
