--- a/index.html
+++ b/index.html
@@ -4,35 +4,76 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sicko</title>
+    <title>Sicko | Inicio</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+    />
     <link rel="stylesheet" href="./css/style.css" />
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
 
   <body>
-    <header id="header" class="header">
-      <div class="header__Logo">
-        <a href="./index.html">
-          <img
+    <nav class="navbar navbar-expand-xl">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="./index.html"
+          ><img
             src="./assets/sicko.png"
             class="logotipoHeader"
             alt="Logotipo Sicko"
-          />
-        </a>
+        /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link paginaSeleccionada" aria-current="page" href="./index.html"
+                >INICIO</a
+              >
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                PRODUCTOS
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">REMERAS</a></li>
+                <li><a class="dropdown-item" href="#">BUZOS</a></li>
+                <li>
+                  <a class="dropdown-item" href="#">POSTERS</a>
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/contacto.html">CONTACTO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/ubicacion.html">UBICACIÓN</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/preventa.html">PREVENTA</a>
+            </li>
+          </ul>
+        </div>
       </div>
-      <nav class="header__Menu">
-        <ul class="menuHeader">
-          <li><a href="./index.html">INICIO</a></li>
-          <li><a href="./productos.html">PRODUCTOS</a></li>
-          <li><a href="./contacto.html">CONTACTO</a></li>
-          <li><a href="./ubicacion.html">UBICACIÓN</a></li>
-          <li><a href="./preventa.html">PREVENTA</a></li>
-        </ul>
-      </nav>
-    </header>
+    </nav>
     <main class="paddingBottom">
       <div class="bannerNaruto">
         <img
@@ -42,7 +83,9 @@
         />
       </div>
       <div class="paddingBottom"></div>
-      <h1 class="intro_titulo   animate__animated animate__fadeInDown">PRODUCTOS DESTACADOS</h1>
+      <h1 class="intro_titulo animate__animated animate__fadeInDown">
+        PRODUCTOS DESTACADOS
+      </h1>
       <section class="recuadrosProductos">
         <div class="flex-container">
           <div class="flex-item displayNone">
@@ -100,5 +143,6 @@
       <p>&copy; since 2021</p>
       <div class="paddingBottom"></div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
