--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -107,5 +107,6 @@
     <footer id="footer" class="footer">
       <p>&copy; since 2021</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
