--- a/pages/preventa.html
+++ b/pages/preventa.html
@@ -92,3 +92,6 @@
         <p>&copy; since 2021</p>
         <div class="paddingBottom"></div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+    </body>
+    </html>
