--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -16,7 +16,7 @@
   />
   </head>
 
-  <body>
+  <>
     <nav class="navbar navbar-expand-xl">
       <div class="container-fluid">
         <a class="navbar-brand" href="../index.html"
@@ -93,5 +93,6 @@
       <p>&copy; since 2021</p>
       <div class="paddingBottom"></div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
