--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link paginaSeleccionada" aria-current="page" href="./index.html"
+              <a
+                class="nav-link paginaSeleccionada"
+                aria-current="page"
+                href="./index.html"
                 >INICIO</a
               >
             </li>
