--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sicko | Contacto</title>
     <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
-  />
-    <link rel="stylesheet" href="../css/style.css"/>
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="../css/style.css" />
   </head>
 
   <body>
@@ -58,7 +58,9 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link paginaSeleccionada" href="./contacto.html">CONTACTO</a>
+              <a class="nav-link paginaSeleccionada" href="./contacto.html"
+                >CONTACTO</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./ubicacion.html">UBICACIÓN</a>
