segunda entrega proyecto final

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
               >
                 PRODUCTOS
               </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">REMERAS</a></li>
-                <li><a class="dropdown-item" href="#">BUZOS</a></li>
+              <ul class="dropdown-menu"> 
+                <li><a class="dropdown-item" href="./pages/productos.html">REMERAS</a></li>
+                <li><a class="dropdown-item" href="./pages/productos.html">BUZOS</a></li>
                 <li>
-                  <a class="dropdown-item" href="#">POSTERS</a>
+                  <a class="dropdown-item" href="./pages/productos.html">POSTERS</a>
                 </li>
               </ul>
             </li>
@@ -86,6 +86,8 @@
         />
       </div>
       <div class="paddingBottom"></div>
+      </div>
+      <div class="paddingBottom"></div>
       <h1 class="intro_titulo animate__animated animate__fadeInDown">
         PRODUCTOS DESTACADOS
       </h1>
@@ -104,7 +106,6 @@
               class="imagenesCatalogo displayNone"
               alt="kenma-remera"
             />
-            <p class="textoCatalogo">Remera Kozume Kenma</p>
           </div>
           <div class="flex-item">
             <img
@@ -129,7 +130,7 @@
               class="imagenesCatalogo2"
               alt="trafalgar-separador-2"
             />
-            <p class="textoCatalogo2">Remera Trafalgar</p>
+
           </div>
           <div class="flex-item">
             <img
