--- a/pages/productos.html
+++ b/pages/productos.html
@@ -54,10 +54,20 @@
                 PRODUCTOS
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">REMERAS</a></li>
-                <li><a class="dropdown-item" href="#">BUZOS</a></li>
                 <li>
-                  <a class="dropdown-item" href="#">POSTERS</a>
+                  <a class="dropdown-item" href="../pages/productos.html"
+                    >REMERAS</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="../pages/productos.html"
+                    >BUZOS</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="../pages/productos.html"
+                    >POSTERS</a
+                  >
                 </li>
               </ul>
             </li>
@@ -74,34 +84,43 @@
         </div>
       </div>
     </nav>
+
+    <div class="paddingBottom"></div>
+    <div class="sickoProductos">
+      <img src="/assets/fotopromocional2.png" class="d-block w-100" alt="..." />
+    </div>
     <main>
+      <div class="paddingBottom"></div>
       <h1 class="animate__animated animate__fadeInDown">REMERAS</h1>
       <div class="grid-container">
         <div class="grid-item">
-          <img src="./assets/trafalgar-law-2.jpg" alt="Remera Trafalgar" />
+          <img src="../assets/trafalgar-law-2.jpg" alt="Remera Trafalgar" />
         </div>
         <div class="grid-item">
-          <img src="./assets/kenma-remera.jpg" alt="Remera Kenna" />
+          <img src="../assets/kenma-remera.jpg" alt="Remera Kenna" />
         </div>
         <div class="grid-item">
-          <img src="./assets/mitsuya-takashi.jpg" alt="Remera Mitsuya" />
+          <img src="../assets/mitsuya-takashi.jpg" alt="Remera Mitsuya" />
         </div>
         <div class="grid-item">
-          <img src="./assets/jujutsu-remera.jpg" alt="Remera Choso" />
+          <img src="../assets/jujutsu-remera.jpg" alt="Remera Choso" />
         </div>
         <div class="grid-item">
-          <img src="./assets/jojos-remera.jpg" alt="Kishibe Rohan" />
+          <img src="../assets/jojos-remera.jpg" alt="Kishibe Rohan" />
         </div>
         <div class="grid-item">
           <img
-            src="./assets/nanatsunotaizai-remera.jpg"
+            src="../assets/nanatsunotaizai-remera.jpg"
             alt="Ban el zorro de la codicia"
           />
         </div>
       </div>
+      
     </main>
     <div class="paddingBottom"></div>
+    <div class="paddingBottom"></div>
     <footer id="footer" class="footer">
+      <div class="paddingBottom"></div>
       <p>&copy; since 2021</p>
 
       <div class="paddingBottom"></div>
