--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -16,7 +16,7 @@
   />
   </head>
 
-  <>
+  
     <nav class="navbar navbar-expand-xl">
       <div class="container-fluid">
         <a class="navbar-brand" href="../index.html"
@@ -54,10 +54,10 @@
                 PRODUCTOS
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">REMERAS</a></li>
-                <li><a class="dropdown-item" href="#">BUZOS</a></li>
+                <li><a class="dropdown-item" href="../pages/productos.html">REMERAS</a></li>
+                <li><a class="dropdown-item" href="../pages/productos.html">BUZOS</a></li>
                 <li>
-                  <a class="dropdown-item" href="#">POSTERS</a>
+                  <a class="dropdown-item" href="../pages/productos.html">POSTERS</a>
                 </li>
               </ul>
             </li>
