--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -50,10 +50,10 @@
                 PRODUCTOS
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">REMERAS</a></li>
-                <li><a class="dropdown-item" href="#">BUZOS</a></li>
+                <li><a class="dropdown-item" href="../pages/productos.html">REMERAS</a></li>
+                <li><a class="dropdown-item" href="../pages/productos.html">BUZOS</a></li>
                 <li>
-                  <a class="dropdown-item" href="#">POSTERS</a>
+                  <a class="dropdown-item" href="../pages/productos.html">POSTERS</a>
                 </li>
               </ul>
             </li>
