--- a/pages/productos.html
+++ b/pages/productos.html
@@ -84,11 +84,22 @@
         </div>
       </div>
     </nav>
-
     <div class="paddingBottom"></div>
-    <div class="sickoProductos">
-      <img src="/assets/fotopromocional2.png" class="d-block w-100" alt="..." />
-    </div>
+    <div id="carouselExampleCaptions" id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+          aria-label="Slide 2"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="7000">
+          <a href="../pages/productos.html"><img src="../assets/cararoja.png" class="d-block w-100" alt="..."></a>
+        </div>
+        <div class="carousel-item" data-bs-interval="7000">
+          <a href="../pages/productos.html"><img src="../assets/ojosrojos.jpg" class=" d-block w-100" alt="..."></a>
+        </div>
+      </div>
     <main>
       <div class="paddingBottom"></div>
       <h1 class="animate__animated animate__fadeInDown">REMERAS</h1>
