--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="sicko, inicio, remeras, ropa, one piece, haikyuu" />
+    <meta name="description" content="La mejor ropa de anime a un precio inigualable. Envíos gratis a todo el país.">
     <title>Sicko | Inicio</title>
     <link
       rel="stylesheet"
