--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="sicko, contacto, consultas" />
+    <meta name="description" content="¿Tenés alguna duda? ¡Contactate con nosotros! Atención al cliente rápida e inmejorable. Envíos gratis a todo el país.">
     <title>Sicko | Contacto</title>
     <link
       rel="stylesheet"
