--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="sicko, remeras, ropa, one piece, haikyuu, productos" />
+    <meta name="description" content="Mirá acá los productos de Sicko a un precio y calidad inigualables. Envíos gratis a todo el país.">
     <title>Sicko | Productos</title>
     <link
       rel="stylesheet"
