--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="sicko, ubicacion, mapa, google maps" />
+    <meta name="description" content="¿Buscando la ubicación de la mejor ropa de anime a un precio inigualable, entrá acá?. Envíos gratis a todo el país.">
     <title>Sicko | Ubicación</title>
     <link
     rel="stylesheet"
