agregadas secciones scss

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -102,6 +102,7 @@
           <a href="../pages/productos.html"><img src="../assets/ojosrojos.jpg" class=" d-block w-100" alt="..."></a>
         </div>
       </div>
+      </div>
     <main>
       <div class="paddingBottom"></div>
       <h1 class="animate__animated animate__fadeInDown">REMERAS</h1>
