arreglado mal linkeo hacia productos.html

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="sicko, remeras, ropa, one piece, haikyuu, productos" />
-    <meta name="description" content="Mirá acá los productos de Sicko a un precio y calidad inigualables. Envíos gratis a todo el país.">
+    <meta
+      name="keywords"
+      content="sicko, remeras, ropa, one piece, haikyuu, productos"
+    />
+    <meta
+      name="description"
+      content="Mirá acá los productos de Sicko a un precio y calidad inigualables. Envíos gratis a todo el país."
+    />
     <title>Sicko | Productos</title>
     <link
       rel="stylesheet"
@@ -57,17 +63,17 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="../pages/productos.html"
+                  <a class="dropdown-item" href="./productos.html"
                     >REMERAS</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="../pages/productos.html"
+                  <a class="dropdown-item" href="./productos.html"
                     >BUZOS</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="../pages/productos.html"
+                  <a class="dropdown-item" href=".productos.html"
                     >POSTERS</a
                   >
                 </li>
@@ -87,22 +93,41 @@
       </div>
     </nav>
     <div class="paddingBottom"></div>
-    <div id="carouselExampleCaptions" id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+    <div
+      id="carouselExampleCaptions"
+      id="carouselExampleInterval"
+      class="carousel slide"
+      data-bs-ride="carousel"
+    >
       <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-          aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-          aria-label="Slide 2"></button>
+        <button
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide-to="0"
+          class="active"
+          aria-current="true"
+          aria-label="Slide 1"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide-to="1"
+          aria-label="Slide 2"
+        ></button>
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="7000">
-          <a href="../pages/productos.html"><img src="../assets/cararoja.png" class="d-block w-100" alt="..."></a>
+          <a href="../pages/productos.html"
+            ><img src="../assets/cararoja.png" class="d-block w-100" alt="..."
+          /></a>
         </div>
         <div class="carousel-item" data-bs-interval="7000">
-          <a href="../pages/productos.html"><img src="../assets/ojosrojos.jpg" class=" d-block w-100" alt="..."></a>
+          <a href="../pages/productos.html"
+            ><img src="../assets/ojosrojos.jpg" class="d-block w-100" alt="..."
+          /></a>
         </div>
       </div>
-      </div>
+    </div>
     <main>
       <div class="paddingBottom"></div>
       <h1 class="animate__animated animate__fadeInDown">REMERAS</h1>
@@ -129,7 +154,6 @@
           />
         </div>
       </div>
-      
     </main>
     <div class="paddingBottom"></div>
     <div class="paddingBottom"></div>
