--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -56,10 +56,10 @@
                 PRODUCTOS
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="../pages/productos.html">REMERAS</a></li>
-                <li><a class="dropdown-item" href="../pages/productos.html">BUZOS</a></li>
+                <li><a class="dropdown-item" href="./productos.html">REMERAS</a></li>
+                <li><a class="dropdown-item" href="./productos.html">BUZOS</a></li>
                 <li>
-                  <a class="dropdown-item" href="../pages/productos.html">POSTERS</a>
+                  <a class="dropdown-item" href="./productos.html">POSTERS</a>
                 </li>
               </ul>
             </li>
